--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,7 @@ body {
     )
     rgb(var(--background-start-rgb)); */
 
-    background: rgb(249 250 251);
+    background: #00111C;
 } 
 
 @layer utilities {
