--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,7 @@ body {
     )
     rgb(var(--background-start-rgb)); */
 
-    background: #00111C;
+    @apply bg-zinc-950;
 } 
 
 @layer utilities {
